--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@ html<!DOCTYPE html>
     
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#F3EFE8">
+    <meta property="og:title" content="InBetween | IB">
+    <meta property="og:description" content="Uno spazio per osservare ciò che accade quando non accade nulla. Un esperimento digitale per esplorare la noia come spazio creativo e riflessivo.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://inbetween-app.netlify.app">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="InBetween | IB">
+    <meta name="twitter:description" content="Uno spazio per osservare ciò che accade quando non accade nulla.">
     
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
